# data_dependence

./: README.md  main.py  pyproject.toml
data_files/en_files/: 109_tmp_data_en.csv  1545_tmp_data_en.csv  6455_tmp_data_en.csv  6614_tmp_data_en.csv
data_files/gm_files/: 109_tmp_data_gm.csv  1545_tmp_data_gm.csv  6455_tmp_data_gm.csv  6614_tmp_data_gm.csv
utils/: __init__.py  read_data.py
